[metadata]
name = oarepo-cli
version = 1.0.0
description = Utilities for managing invenio monorepo
authors = Miroslav Simek <simeki@vscht.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    colorama
    gnureadline
    click
    pyfiglet
    cookiecutter
    pyyaml

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

[options.entry_points]
console_scripts =
    oarepo-initialize = oarepo_cli.cli.initialize:run
    oarepo-cli = oarepo_cli.cli.cli:run
