[metadata]
name = oarepo-cli
version = 11.0.38
description = Utilities for managing invenio monorepo
authors = Miroslav Simek <simeki@vscht.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.9
install_requires =
    colorama
    click
    cookiecutter
    pyyaml
    tomlkit
    deepmerge
    gitpython
    pydriller
    watchdog

    # for export of requirements
    tomli-w
    requirements-parser

    # for services startup check
    python-dotenv
    minio
    redis
    psycopg[binary]
    pika
    opensearch-py

include_package_data = true

[options.entry_points]
console_scripts =
    nrp-cli = oarepo_cli.cli.cli:run
