[metadata]
name = oarepo-cli
version = 11.0.38
description = Utilities for managing invenio monorepo
authors = Miroslav Simek <simeki@vscht.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.9
install_requires =
    colorama
    click
    cookiecutter
    tomlkit
    deepmerge
    gitpython
    pydriller
    watchdog
    importlib_metadata
    ruamel.yaml


    # for export of requirements
    tomli-w
    requirements-parser

    # for services startup check
    python-dotenv
    minio
    redis
    psycopg[binary]
    pika
    opensearch-py

    # for formatting
    black
    isort
    autoflake
    licenseheaders
    djlint

include_package_data = true

[options.entry_points]
console_scripts =
    nrp-cli = oarepo_cli.cli:run
    nrp = oarepo_cli.cli:run
nrp_cli.file_formats =
    text = oarepo_cli.model.gen.formats:TextFormat
    yaml = oarepo_cli.model.gen.formats:YAMLFormat
    cfg  = oarepo_cli.model.gen.formats:CFGFormat
