[metadata]
name = oarepo-landing
version = 1.0.0
description = Landing page
keywords = Invenio UI
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False

[options.entry_points]
invenio_assets.webpack =
    oarepo_landing = oarepo_landing.theme.webpack:theme

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

